--- a/index.html
+++ b/index.html
@@ -11,34 +11,46 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section class="card">
+    <div class="front-card">
+      <div class="card-logo"></div>
+      <div class="card-info">
+        <h2>0000 0000 0000 0000</h2>
+        <h3>Jane Appleseed</h3>
+        <h3>00/00</h3>
+      </div>
+    </div>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
+    <div class="back-card">
+      <h5>000</h5>
+    </div>
+  </section>
+  
+  <section class="card-form">
+    <form action="">
+      <label for="name-card">Cardholder Name</label>
+      <input type="text" placeholder="e.g. Jane Appleseed" name="name-card" id="name-card" required>
+      <label for="number-card">Card Number</label>
+      <input type="number" placeholder="e.g. 1234 5678 9123 0000" name="number-card" id="number-card" required>
+      <label for="date-card">Exp. Date (MM/YY)</label>
+      <div class="date-card">
+        <input type="number" placeholder="MM" name="month-card" id="month-card" required>
+        <input type="number" placeholder="YY" name="year-card" id="year-card" min="1" max="" required>
+      </div>
+      <label for="cvc">CVC</label>
+      <input type="number" name="cvc" id="cvc" required>
+      <input type="submit" value="Confirm">
+    </form>
+  </section>
 
   <!-- Completed state start -->
+  <section class="state-form complete">
+    <img src="images/icon-complete.svg" alt="State Complete">
+    <h1>Thank you!</h1>
+    <h5>We've added your card details</h5>
+    <button type="button">Continue</button>
+  </section>
 
-  Thank you!
-  We've added your card details
-  Continue
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
