--- a/index.html
+++ b/index.html
@@ -11,55 +11,66 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <article class="card-container">
-    <section class="card">
-      <div class="front-card">
-        <div class="card-logo">
-          <img src="images/card-logo.svg" alt="">
-        </div>
-        <div class="card-info">
-          <h1 id="card-number-front" default="0000 0000 0000 0000">0000 0000 0000 0000</h1>
-          <h3 id="card-name-front" default="Jane Appleseed">Jane Appleseed</h3>
-          <h3 id="card-date-front" default="00/00">00/00</h3>
+  <section class="card">
+    <div class="front-card">
+      <div class="card-logo">
+        <img src="images/card-logo.svg" alt="">
+      </div>
+      <div class="card-info">
+        <h1 id="card-number-front" default="0000 0000 0000 0000">0000 0000 0000 0000</h1>
+        <h3 id="card-name-front" default="Jane Appleseed">Jane Appleseed</h3>
+        <div class="date-card-front">
+          <h3 id="card-month-front">00</h3>
+          <h3>/</h3>
+          <h3 id="card-year-front">00</h3>
         </div>
       </div>
+    </div>
 
-      <div class="back-card">
-        <h5 id="card-cvc-back">000</h5>
-      </div>
-    </section>
-    
-    <section class="card-form completed">
+    <div class="back-card">
+      <h5 id="card-cvc-back">000</h5>
+    </div>
+  </section>
+  <section class="card-container">
+
+    <section class="card-form">
       <form action="">
         <label for="name-card">Cardholder Name</label>
-        <input type="text" placeholder="e.g. Jane Appleseed" name="name-card" id="name-card" required>
+        <input type="text" placeholder="e.g. Jane Appleseed" name="name-card" id="name-card" required oninput="inputName()">
+        <span id="errorName"></span>
+
         <label for="number-card">Card Number</label>
-        <input type="number" placeholder="e.g. 1234 5678 9123 0000" name="number-card" id="number-card" required>
+        <input type="number" placeholder="e.g. 1234 5678 9123 0000" name="number-card" id="number-card" required oninput="inputCardNum()">
+        <span id="errorNumber"></span>
 
         <div class="info">
           <div class="expirated-card">
             <label for="month-card">Exp. Date (MM/YY)</label>
-            <input type="number" placeholder="MM" name="month-card" id="month-card" required min="1" max="31">
-            <input type="number" placeholder="YY" name="year-card" id="year-card" min="1" max="" required min="2022" max="2099">
+            <div>
+              <input type="number" placeholder="MM" name="month-card" id="month-card" required min="1" max="31" oninput="inputMM()">
+              <input type="number" placeholder="YY" name="year-card" id="year-card" required oninput="inputYY()">
+            </div>
+            <span id="errorDate"></span>
           </div>
           <div class="security-card">
             <label for="cvc">CVC</label>
-            <input type="number" placeholder="e.g. 123" name="cvc" id="cvc" required>
+            <input type="number" placeholder="e.g. 123" name="cvc" id="cvc" required oninput="inputCvc()">
+            <span id="errorCvc"></span>
           </div>
         </div>
         <button type="submit" class="confirm-btn">Confirm</button>
       </form>
     </section>
-  </article>
-  
 
-  <!-- Completed state start -->
-  <section class="state-form completed">
-    <img src="images/icon-complete.svg" alt="State Complete">
-    <h1>Thank you!</h1>
-    <h5>We've added your card details</h5>
-    <button type="button" class="continue-btn">Continue</button>
+    <!-- Completed state start -->
+    <section class="state-form hidden">
+      <img src="images/icon-complete.svg" alt="State Complete">
+      <h1>Thank you!</h1>
+      <h5>We've added your card details</h5>
+      <button type="button" class="continue-btn">Continue</button>
+    </section>
   </section>
+
 
   <script src="script.js"></script>
 </body>
